chapter_3/ingress/haproxy_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx.192.168.86.30.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
  - host: php-apache.192.168.86.30.nip.io
    http:
      paths:
      - backend:
          serviceName: php-apache 
          servicePort: 80
        path: /
